login page, register page, changed option for assigned pages in admin panel, added link in the search form for commercial properties

--- a/components/sections/latest_posts.twig
+++ b/components/sections/latest_posts.twig
@@ -2,7 +2,7 @@
     title: section.lp_title,
     more_link: {
         title: 'More News & Insights',
-        url: fn('get_the_permalink',options.page_url.blog_page)
+        url: fn('get_the_permalink',options.page.blog_list_page_id)
     },
     posts: fn('get_latest_posts')
 } %}
