--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -73,16 +73,20 @@
 */
 @import "sections/404";
 @import "sections/404_search-properties";
+@import "sections/login-register";
+@import "sections/portal-login";
 @import "sections/home-hero";
 @import "sections/page-top";
 @import "sections/newsletter";
 @import "sections/content-image";
 @import "sections/cta-carousel";
+@import "sections/cta-text";
 @import "sections/property-calculator";
 @import "sections/promo-area";
 @import "sections/dataloft";
 @import "sections/valuation-types";
 @import "sections/two-wide-content-boxes";
+@import "sections/shortcode-form";
 
 
 /*
