--- a/templates/single.twig
+++ b/templates/single.twig
@@ -34,7 +34,7 @@
 
                             {% include 'components/parts/share.twig' %}
 
-                            <a href="{{ fn('get_the_permalink',options.page_url.blog_page) }}" class="btn btn-lg btn-primary text-uppercase">Back to Insights</a>
+                            <a href="{{ fn('get_the_permalink',options.page.blog_list_page_id) }}" class="btn btn-lg btn-primary text-uppercase">Back to Insights</a>
                         </div>
                     </div><!-- /content-wrapper -->
 
