--- a/templates/propertyhive/global/search-form-hero_search.twig
+++ b/templates/propertyhive/global/search-form-hero_search.twig
@@ -4,7 +4,7 @@
         <ul>
             <li class="active"><a href="javascript:;" data-change-department data-department="residential-sales">Homes For Sale</a></li>
             <li><a href="javascript:;" data-change-department data-department="residential-lettings">Homes To Rent</a></li>
-            <li><a href="#">Commercial Property</a></li>
+            <li><a href="{{ options.page_url.commercial_properties }}" target="_blank">Commercial Property</a></li>
         </ul>
     </nav>
 
