display brnaches list in admin menus

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="col-xl-4">
-                <div class="footer-widgets--widget">
+                <div class="footer-widgets--widget menu-2columns">
                     {{ footer_widgets3 }}
                 </div>
             </div>
