branch detail - contact information block

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -98,6 +98,7 @@
 @import "pages/insights-list";
 @import "pages/insight-detail";
 @import "pages/property-my-account";
+@import "pages/branch-detail";
 
 
 // Responsive Design
