--- a/src/sass/essential/common/_helpers.scss
+++ b/src/sass/essential/common/_helpers.scss
@@ -34,6 +34,18 @@
     }
 }
 
+.content-2-columns{
+    columns: 2;
+}
+
+.shortcode-link-arrow{
+    font-weight: normal;
+
+    i{
+        color: $brand-main-red;
+    }
+}
+
 .content-clear{
     h2, h3, h4, h5,
     p{
