--- a/src/sass/essential/global/_blog-post.scss
+++ b/src/sass/essential/global/_blog-post.scss
@@ -20,11 +20,15 @@
     }
 
     h3{
-        margin: 20px 0;
+        margin: 15px 0;
         line-height: 28px;
 
         a{
             color: $brand-main-blue;
         }
+    }
+
+    & > *:last-child{
+        margin-bottom: 0;
     }
 }
