block links section for property guide page

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -95,6 +95,7 @@
 @import "sections/valuation-types";
 @import "sections/two-wide-content-boxes";
 @import "sections/shortcode-form";
+@import "sections/block-links";
 
 
 /*
