--- a/templates/single-branch.twig
+++ b/templates/single-branch.twig
@@ -27,7 +27,7 @@
                     </div>
                     <div class="flex-grow-1">
                         {% if post.branch_address %}
-                            <div>{{ post.branch_address }}<br><a href="#">View Map</a></div>
+                            <div>{{ post.branch_address }}<br><a href="#">View on Map</a></div>
                         {% endif %}
                     </div>
                     <div>
