--- a/templates/single-branch.twig
+++ b/templates/single-branch.twig
@@ -33,10 +33,10 @@
                     <div>
                         {% include 'components/parts/link.twig' with {
                             link: {
-                                title: 'Email',
+                                title: 'Email Us',
                                 url: '#'
                             },
-                            css_class: 'link-border link-border--red'
+                            css_class: 'btn btn-lg btn-primary text-uppercase'
                         } %}
                     </div>
                 </div>
