--- a/src/sass/essential/sections/_404_search-properties.scss
+++ b/src/sass/essential/sections/_404_search-properties.scss
@@ -24,6 +24,7 @@
         margin-right: -30px;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 
+        .control-address_keyword,
         .control-property_type{
             padding-left: 0;
             border-left-width: 0;
