--- a/templates/propertyhive/property-detail/arrange-viewing.twig
+++ b/templates/propertyhive/property-detail/arrange-viewing.twig
@@ -5,14 +5,13 @@
             <div class="branch-info">
                 <div class="branch-info--name">{{ branch_data.title }} Branch</div>
                 <div class="branch-info--phone-number h3 mb-0 text-uppercase">{{ branch_data.phone }}</div>
-                <a href="#" class="link-border link-border--red">Email Us</a>
+                <a href="#" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
+                <div class="branch-info--address">
+                    {{ branch_data.address }}<br>
+                    <a href="#property-info-location" data-open-property-tab>View on map</a>
+                </div>
+                {{ fn('propertyhive_make_enquiry_button') }}
             </div>
-        </div>
-        <div class="property-arrange-viewing--address-info">
-            <p>{{ branch_data.address }}</p>
-            <p><a href="#property-info-location" data-open-property-tab>View on map</a></p>
-            {#<a href="#" class="link-border link-border--red">Arrange a viewing</a>#}
-            {{ fn('propertyhive_make_enquiry_button') }}
         </div>
     </div>
 {% endif %}
