--- a/templates/propertyhive/shortcode/calculators.twig
+++ b/templates/propertyhive/shortcode/calculators.twig
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="property-calculators-wrapper">
 
-                <ul class="nav justify-content-center">
+                <ul class="nav">
                     <li>
                         <a class="active" data-toggle="tab" href="#property_mortgage_calculator">Mortgage Calculator</a>
                     </li>
