--- a/templates/propertyhive/shortcode/similar-properties.twig
+++ b/templates/propertyhive/shortcode/similar-properties.twig
@@ -1,4 +1,4 @@
-<section class="page-section page-section--padding50">
+<section class="page-section page-section--padding50 section-shortcode-similar-properties">
     <div class="container">
         <div class="page-section--heading">
             <div class="row align-items-center">
