branch view google map image

--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -1,3 +1,9 @@
+.branch-google-map-image{
+    img{
+        max-width: 600px;
+    }
+}
+
 .property-search-department-tabs{
     ul{
         list-style: none;
