new homes listing page + improvements

--- a/components/sections/hero_default.twig
+++ b/components/sections/hero_default.twig
@@ -1,1 +1,6 @@
-{% include 'static-sections/page-top.twig' %}
+{% include 'static-sections/page-top.twig' with {
+    custom: {
+        title: section.dhero_title,
+        content: section.dhero_content
+    }
+} %}
