--- a/src/sass/essential/sections/_page-top.scss
+++ b/src/sass/essential/sections/_page-top.scss
@@ -14,6 +14,24 @@
         margin-top: 27px;
     }
 
+    &--content{
+        font-size: 22px;
+        margin-top: 20px;
+
+        .shortcode-link-arrow{
+            display: inline-block;
+        }
+
+        .shortcode-link-arrow,
+        p{
+            margin-bottom: 20px;
+        }
+
+        & > *:last-child{
+            margin-bottom: 0;
+        }
+    }
+
     &--short-description{
         font-size: 22px;
         margin-top: 15px;
