fix for page top section + added propertyhive to whitelist for build

--- a/src/sass/essential/sections/_page-top.scss
+++ b/src/sass/essential/sections/_page-top.scss
@@ -20,6 +20,10 @@
 
         .shortcode-link-arrow{
             display: inline-block;
+
+            &:last-child{
+                margin-bottom: 0;
+            }
         }
 
         .shortcode-link-arrow,
