work with new home detail - in progress

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -98,6 +98,7 @@
 @import "sections/two-wide-content-boxes";
 @import "sections/shortcode-form";
 @import "sections/block-links";
+@import "sections/new-home-details";
 
 
 /*
