--- a/templates/archive.twig
+++ b/templates/archive.twig
@@ -80,7 +80,7 @@
                         </div>
 
                     {% else %}
-                        <div class="alert alert-info">No Insights found.</div>
+                        <h3>No Insights found.</h3>
                     {% endif %}
 
                     {#<section class="page-section page-section--padding50">
