--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -273,7 +273,7 @@
                 }
 
                 a{
-                    @include link-border;
+                    @include link-border($brand-main-blue);
 
                     &:hover{
                         color: $brand-main-red;
