--- a/src/sass/essential/pages/_properties-search.scss
+++ b/src/sass/essential/pages/_properties-search.scss
@@ -49,6 +49,7 @@
                 padding-right: 20px;
                 position: relative;
                 z-index: 2;
+                cursor: pointer;
 
                 &:focus-within{
                     outline: none;
