--- a/src/sass/essential/pages/_property-my-account.scss
+++ b/src/sass/essential/pages/_property-my-account.scss
@@ -67,7 +67,7 @@
 
         .control-department{
             label:not([for]) {
-                margin-right: 50px;
+                display: block;
             }
         }
     }
