--- a/src/sass/essential/sections/_shortcode-form.scss
+++ b/src/sass/essential/sections/_shortcode-form.scss
@@ -30,7 +30,7 @@
 
                 &.control-department{
                     label:not([for]) {
-                        margin-right: 40px;
+                        display: block;
                     }
                 }
 
