--- a/templates/propertyhive/property-detail/tabs-content.twig
+++ b/templates/propertyhive/property-detail/tabs-content.twig
@@ -45,7 +45,7 @@
                                             <li><strong>Let type:</strong> {{ property_type }}</li>
                                         {% endif %}
                                         {% if furnished %}
-                                            <li><strong>Furnish type:</strong> {{ furnished }}</li>
+                                            <li><strong>{{ furnished }}</strong> </li>
                                         {% endif %}
                                     </ul>
                                 </div>
